<resources>
    <string name="app_name">FindIt!</string>
    <string name="loading">Loading…</string>
    <!-- Authorization activity -->
    <string name="auth_auth_email">E-mail</string>
    <string name="auth_password">Password</string>
    <string name="auth_repeat_password">Repeat password</string>
    <string name="auth_to_login">To login</string>
    <string name="auth_login">Login</string>
    <string name="auth_to_registration">To registration</string>
    <string name="auth_register">Register</string>
    <!-- Authorization activity error -->
    <string name="auth_password_length_error">Required password can\'t be at least 6 digits</string>
    <string name="auth_nickname_length_error">Nickname can\'t be at least 2 digits</string>
    <string name="auth_nickname_equals_error">You should enter different nickname</string>
    <string name="auth_repeat_password_error">Passwords does not match</string>
    <string name="auth_email_error">Please enter correct email</string>
    <!-- Main Activity -->
    <string name="main_photo_title">Action</string>
    <string name="main_profile_title">Profile</string>
    <string name="main_quests_title">Quests</string>
    <!-- Camera forbid dialog -->
    <string name="camera_dialog_title">Warning</string>
    <string name="camera_dialog_message">This application can\'t work normally without camera permission. To get full app experience, please allow use camera.</string>
    <string name="camera_dialog_positive_btn">Ok</string>
    <!-- New quest dialog -->
    <string name="new_quest_dialog_title">Congratulations!</string>
    <string name="new_quest_dialog_message">On your snapshot we found items, which we don\'t seen earlier! Great work! For your help we give you some coins C:\nHere you can see new objects and rewards:</string>
    <string name="new_quest_dialog_positive_btn">Ok</string>
    <!-- Complete quests dialog -->
    <string name="complete_quest_dialog_title">Congratulations!</string>
    <string name="complete_quest_dialog_message">You have been successfully complete following quests: </string>
    <string name="complete_quest_dialog_positive_btn">Ok</string>
    <!-- FAB menu -->
    <string name="fab_settings">Settings</string>
    <string name="fab_auto_flash">Auto-flash</string>
    <!-- Quests fragment -->
    <string name="fragment_quests_title">Quests</string>
    <string name="fragment_quests_remaining_time">Time to new quest:\t %02d min %02d sec</string>
    <string name="fragment_quests_quest_max">You have maximum quests</string>
    <string name="fragment_quests_balance">Balance: %d</string>
    <string name="fragment_quests_level">Level: %d</string>
    <string name="fragment_quests_exp">Exp:\u0020</string>
    <string name="fragment_quests_coins">Coins:\u0020</string>
    <!-- Profile fragment -->
    <string name="fragment_profile_logout">Logout</string>
    <string name="fragment_profile_leader_board">Leader board</string>
    <string name="fragment_profile_level">Level: %d</string>
    <string name="fragment_profile_total_exp">Total XP</string>
    <string name="fragment_profile_completed_quests">Completed quests</string>
    <string name="fragment_profile_coins">Coin balance</string>
    <string name="fragment_profile_rest_experience">Rest experience</string>
    <!-- Leader board activity -->
    <string name="leader_board_title">Leader board</string>
    <string name="leader_board_level_tab">Level</string>
    <string name="leader_board_money_tab">Money</string>
    <string name="leader_board_subjects_tab">New subjects</string>
    <string name="leader_board_type">Leaders in \"%s\" category</string>
    <!-- Reject quest confirmation dialog -->
    <string name="reject_quest_dialog_title">Warning</string>
    <string name="reject_quest_dialog_message">Are you sure that you want skip \"%s\" quest?</string>
    <string name="reject_quest_dialog_positive">Yes</string>
    <string name="reject_quest_dialog_negative">No</string>
    <!-- Quest info dialog -->
    <string name="quest_info_title">%s Quest</string>
    <string name="quest_info_rewards">When you complete this quest you\'ll receive following rewards: </string>
    <string name="quest_info_reward_exp">Experience: %d</string>
    <string name="quest_info_reward_coins">Coins: %d</string>
    <string name="quest_info_rarity">Quest rarity: %s</string>
    <string name="quest_info_reject">Reject this quest</string>
    <string name="quest_info_close">Close</string>
    <!-- Change nickname dialog -->
    <string name="change_nick_title">Enter new nickname</string>
    <string name="change_nick_placeholder">Nickname</string>
    <string name="change_nick_change">Change nickname and pay %d coins</string>
    <string name="change_nick_close">Close</string>
    <!-- Not enough coins dialog -->
    <string name="not_enough_coins_title">Oh no…</string>
    <string name="not_enough_coins_message">You do not have enough coins. FindIt and come later.</string>
    <string name="not_enough_coins_positive">OK</string>
</resources>
