<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white_corner_dialog"
    android:orientation="vertical"
    android:padding="@dimen/padding_default"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <TextView
        android:id="@+id/dialog_change_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_nick_title"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_change_nick_label"
        style="@style/MaterialDarkBox"
        android:layout_width="match_parent"
        app:boxStrokeColor="@android:color/black"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_small">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_change_nick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/change_nick_placeholder"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_change_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_default"
        android:text="@string/change_nick_change" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_close_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_nick_close" />
</LinearLayout>