<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/authBackground"
    android:orientation="vertical"
    android:padding="@dimen/padding_default"
    tools:context=".activity.AuthActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/padding_default"
            android:src="@drawable/logo" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/auth_content_holder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/auth_et_email_layout"
            style="@style/MaterialLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/auth_et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/auth_auth_email"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/auth_et_password_layout"
            style="@style/MaterialLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_small">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/auth_et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/auth_password"
                android:inputType="textPassword"
                android:textColor="@android:color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/auth_et_repeat_password_layout"
            style="@style/MaterialLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_small"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/auth_et_repeat_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/auth_repeat_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/auth_bth_login"
            style="@style/BaseAuthButton"
            android:layout_marginTop="@dimen/padding_small"
            android:enabled="false"
            android:text="@string/auth_login"
            app:rippleColor="@color/authRipple" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/auth_bth_register"
            style="@style/BaseAuthButton"
            android:layout_marginTop="@dimen/padding_small"
            android:text="@string/auth_to_registration"
            app:rippleColor="@color/authRipple" />
    </LinearLayout>

</LinearLayout>